	  guide book so, probably unofficial
MasterOfMuppets
	* Working on The Sign Quest atm.
	* Updating Items / Scripts
Nexon
	* Adding in the new Abyss/Thanatos/Lighthalzen NPC's and optimizing them.
Evera
	* Everything.
	* Gathering iRO information and comparing them to eA scripts.

== Changelog ==

Date		Added
======
05/25
	* Optimized a bit scripted warps, got rid of 'anthell' perm var [Lupus]
05/24
	* Removed Blue Potions from Yuno Shops [Playtester]
	* Fixed the Thanatos Floor 12 warp [Playtester]
	- coordinates are just guessed
	- whoever does the quest should fix the warps there anyways
	* Commented the custom Geffenia Fountain by default [Playtester]
	* Added the Novice Exchange Quest provided by Dr.Evil [Playtester]
	- exchange novice loot for Red Potions
05/23
	* Fixed a bug in the new Job Master [Playtester]
	- he rebirthed you even if you haven't reached level 99...
	* Changed the questions of the Wizard Quiz to official ones [Playtester]
05/22
	* Global_Functions fix. Jobmaster fix. [Lance]
05/19
	* eAAC Update + Fix [erKURITA]
	* Translated sample/gstorage_test.txt
	* Commented a warp that stands in the middle of nowhere [Playtester]
05/17
	* Now the Inns are like on official servers [Playtester]
05/15
	* Fixed DTS warper, optimized Kafra and changed pay cave and orc village kafra [Evera]
	* Fixed Amon Ra's spawning location [Playtester]
	* Corrected 10 Geminis spawning in Lhz1 rather than 2. [Skotlex]
05/14
	* Fixed the quiz in the Wizard Job quest a bit [Playtester]
05/13
	* Fixed the new shops [Playtester]
	* Added missing shops at Beacon Island [Playtester]
05/12
	* Added DTS (Dungeon Teleport System) Warper NPC [Evera]
05/10
	* Fixed some typos and grammatical errors on the Job Dancer quest...
	  [Skotlex]
	* Fixed Inn dialogues [Playtester]
05/09
	* Inn now costs 5k at every level [Playtester]
05/07
	* Fixed some grammar errors in Thief Job, Kunai, and others [KillerBox]
	* Fixed Sea Otter Quest thanks to nolider [Playtester]
05/06