@@ -284,9 +284,11 @@
 272: You can't trade on this map
 273: Commands available:
 274: %d commands found.
-275: Usage: @request <petition/message to online GMs>.
-276: (@request): %s
-277: @request sent.
+275: No commands found.
+276: You can't open shop on this map
+277: Usage: @request <petition/message to online GMs>.
+278: (@request): %s
+279: @request sent.
 // Guild Castles Number
 // --------------------
 299: ?? Castles
