@@ -130,6 +130,7 @@ mf_nocommand	37
 mf_nodrop	38
 mf_jexp		39
 mf_bexp		40
+mf_novending	41
 
 cell_wall	1
 cell_water	3
