@@ -1,0 +1,43 @@
+//===== Athena Script =======================================
+//= Market Place
+//===== By ================================================
+//= Lupus
+//===== Version ===========================================
+//= 1.0
+//===== Compatible With ===================================
+//= eAthena 5760+
+//===== Description =======================================
+//= This script should move vending crowds from Prontera
+//= streets to a suitable market place. Save your traffic 8)
+//===== Comments ==========================================
+// No comments yet
+//=========================================================
+
+
+prontera.gat,144,174,3	script	Market Place	722,{
+	mes"[Market Place]";
+	mes"Tristan III's order: ^FF0000Move all the private shops to a special Market Place^000000.";
+	next;
+	menu "Enter the Market",M_ENTER, "Cancel",-;
+	close2;
+	end;
+
+M_ENTER:
+	if(rand(10)==0 && checkcart(0) && @mrketflg<30 && @mrketflg>5 && getcharid(2)>1) FlagEmblem getcharid(2);
+	warp "gon_test",27+rand(5),98;
+	set @mrketflg,@mrketflg+1;
+	end;
+}
+
+gon_test,73,103,0	script	MarketExit	45,1,2,{
+	warp "prontera.gat",155,177-rand(10);
+	end;
+}
+
+//disable vending in Prontera
+prontera.gat	mapflag	novending
+prt_in.gat	mapflag	novending
+//Market Place settings
+gon_test	mapflag	noteleport
+gon_test	mapflag	nomemo
+gon_test	mapflag	nobranch
