@@ -126,3 +126,5 @@ npc: npc/custom/adoption.txt
 //npc: npc/custom/quests/tha_statues.txt
 // -- A quest for Jewel Case for 99 Level Players of any 2nd Class
 //npc: npc/custom/quests/lvl99_quest.txt
+// Disable shops in the Prontera streets and open a special market place.
+//npc/custom/market.txt
